Fix Image going out of the screen

--- a/src/css/Inicio.css
+++ b/src/css/Inicio.css
@@ -355,5 +355,10 @@ footer {
 
   .SecondHero {
     height: 40rem;
+    width: 100%;
+  }
+
+  .HeroImg {
+    width: 100%;
   }
 }
